First draft of content for FB46135.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -176,6 +176,7 @@ under the License.
               Page.new('How do I find data?', 'basics.html#how-do-i-find-data?', []),
               Page.new('Distributed', 'basics.html#distributed', []),
               Page.new('Replication', 'basics.html#replication', []),
+              Page.new('Quorum - writing and reading', 'basics.html#quorum---writing-and-reading', []),
               Page.new('Cloudant Local', 'basics.html#cloudant-local', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
