--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -80,27 +80,29 @@ under the License.
         $('#showCodeButton').click(showCode);
         
         var headerSelectors = "h3";
-        var toc = $("#toc").tocify({
-          selectors: headerSelectors,
-          extendPage: false,
-          theme: "none",
-          smoothScroll: false,
-          showEffectSpeed: 0,
-          hideEffectSpeed: 180,
-          ignoreSelector: ".toc-ignore",
-          hashGenerator: 'pretty',
-          highlightOffset: 60,
-          scrollTo: 55,
-          scrollHistory: true,
-          hashGenerator: function(text, element) {
-            return element[0].getAttribute('id');
-          }
-        }).data("toc-tocify");
-        // Hack to make already open sections to start opened,
-        // instead of displaying an ugly animation
-        setTimeout(function() {
-          toc.setOption("showEffectSpeed", 180);
-        },50);
+        if ($('h3').length !== 0) { 
+          var toc = $("#toc").tocify({
+            selectors: headerSelectors,
+            extendPage: false,
+            theme: "none",
+            smoothScroll: false,
+            showEffectSpeed: 0,
+            hideEffectSpeed: 180,
+            ignoreSelector: ".toc-ignore",
+            hashGenerator: 'pretty',
+            highlightOffset: 60,
+            scrollTo: 55,
+            scrollHistory: true,
+            hashGenerator: function(text, element) {
+              return element[0].getAttribute('id');
+            }
+          }).data("toc-tocify");
+          // Hack to make already open sections to start opened,
+          // instead of displaying an ugly animation
+          setTimeout(function() {
+            toc.setOption("showEffectSpeed", 180);
+          },50);
+        }
         setupLanguages([
           <% if current_page.data.language_tabs %>
             <% current_page.data.language_tabs.each do |lang| %>
