--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -115,16 +115,22 @@ under the License.
         
         var languageInit = $('#lang-selector li.active').text();
         
-        $('#selected-language-value').text(languageInit);
+        $('#selected-language').text(languageInit);
         $('#selected-language').click(langDropdown);
         
         function langDropdown() {
-          $('#lang-selector ul').toggle();
-          $('#selected-language-icon').toggleClass('open');
+          $('#lang-selector ul').show();
         }
         
       });
-
+      
+      var languageInit = $('#lang-selector li.active').text();
+      $('#selected-language').text(languageInit);
+      $('#selected-language').click(langDropdown);
+        
+      function langDropdown() {
+        $('#lang-selector ul').show();
+      }
       
     </script>
     
@@ -261,18 +267,14 @@ under the License.
       </div>
       <div class="dark-box">
         <div id="lang-selector">
-          <div id="selected-language">
-            <span id="selected-language-label">Language:</span>
-            <span id="selected-language-value"></span>
-            <span id="selected-language-icon"></span>
-          </div>
+          <div id="selected-language"></div>
           <ul>
           <% if current_page.data.language_tabs %>
             <% current_page.data.language_tabs.each do |lang| %>
               <% if lang.is_a? Hash %>
-                <li data-language-name="<%= lang.keys[0] %>"><a href="#" data-language-name="<%= lang.keys[0] %>"><span><%= lang.values[0] %></span></a></li>
+                <li data-language-name="<%= lang.keys[0] %>"><a href="#" data-language-name="<%= lang.keys[0] %>"><%= lang.values[0] %></a></li>
               <% else %>
-                <li data-language-name="<%= lang %>"><a href="#" data-language-name="<%= lang %>"><span><%= lang %></span></a></li>
+                <li data-language-name="<%= lang %>"><a href="#" data-language-name="<%= lang %>"><%= lang %></a></li>
               <% end %>
             <% end %>
           <% end %>
