--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -275,73 +275,42 @@ html, body {
     top: 50px;
     height: 55px;
     font-weight: 300;
-    background-color: $examples-bg;
+    background-color: $lang-select-bg;
     border-bottom: 5px solid $lang-select-active-bg;
     #selected-language {
       position: relative;
-      top: 18px;
-      width: 200px;
+      top: 25px;
       margin-right: 20px;
       float: right;
       background-color: #323232;
       color: #fff;
       cursor: pointer;
-      padding: 4px 14px;
+      padding: 0 10px;
       line-height: 30px;
-      border: 1px solid #bdbec0;
-      #selected-language-label {
-        color: #6f6f6f;
-        text-transform: uppercase;
-      }
-      #selected-language-value {
-        color: #bdbec0;
-        font-weight: bold;
-      }
-      #selected-language-icon {
-        display: inline-block;
-        width: 19px;
-        height: 13px;
-        background: url("../images/language_down_arrow.png") no-repeat;
-        position: absolute;
-        right: 20px;
-        top: 12px;
-        &.open {
-          background: url("../images/language_up_arrow.png") no-repeat;
-        }
-      }
     }
     ul {
       list-style-type: none;
-      width: 228px;
       margin: 0;
       padding: 0;
-      top: 70px;
-      right: -230px;
+      top: 55px;
+      right: -46px;
       position: relative;
       float: right;
       display: none;
-      border: 1px solid #b5b5b7;
     }
     li {
       display: block;
     }
     a {
       display: inline-block;
-      color: #787778;
+      color: $lang-select-text;
       text-decoration: none;
-      line-height: 36px;
-      width: 100%;
-      background: #323232;
-      span {
-        padding: 0 15px;
-      }
+      padding: 0 10px;
+      line-height: 30px;
 
       &.active {
-        background-color: #d1d2d4;
-        color: #333;
-        background-image: url("../images/language_check.png");
-        background-position: right 22px bottom 8px;
-        background-repeat: no-repeat;
+        background-color: $lang-select-active-bg;
+        color: $lang-select-active-text;
       }
 
       &:active {
