--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -112,16 +112,6 @@ under the License.
             <% end %>
           <% end %>
         ]);
-        
-        var languageInit = $('#lang-selector li.active').text();
-        
-        $('#selected-language').text(languageInit);
-        $('#selected-language').click(langDropdown);
-        
-        function langDropdown() {
-          $('#lang-selector ul').show();
-        }
-        
       });
       
       var languageInit = $('#lang-selector li.active').text();
@@ -267,18 +257,15 @@ under the License.
       </div>
       <div class="dark-box">
         <div id="lang-selector">
-          <div id="selected-language"></div>
-          <ul>
           <% if current_page.data.language_tabs %>
             <% current_page.data.language_tabs.each do |lang| %>
               <% if lang.is_a? Hash %>
-                <li data-language-name="<%= lang.keys[0] %>"><a href="#" data-language-name="<%= lang.keys[0] %>"><%= lang.values[0] %></a></li>
+                <a href="#" data-language-name="<%= lang.keys[0] %>"><%= lang.values[0] %></a>
               <% else %>
-                <li data-language-name="<%= lang %>"><a href="#" data-language-name="<%= lang %>"><%= lang %></a></li>
+                <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
               <% end %>
             <% end %>
           <% end %>
-          </ul>
         </div>
       </div>
     </div>
