--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -123,7 +123,9 @@ under the License.
           $('#lang-selector ul').show();
         }
           
-        $('blockquote a').attr('title', 'Change this request!');
+        $('blockquote a').attr('title', 'Try this request!');
+        $('blockquote a').attr('target', '_blank');
+        
       });
     </script>
     
