--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -123,7 +123,7 @@ under the License.
           $('#lang-selector ul').show();
         }
           
-        $('blockquote a').attr('title', 'Try this request!');
+        $('blockquote a').attr('title', 'Click here to try out interactive examples!');
         $('blockquote a').attr('target', '_blank');
         
       });
