--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,6 +23,9 @@ under the License.
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "API Documentation" %></title>
 
+    <link href="//cloudant.com/wp-content/themes/cloudant/images/favicon.ico" rel='shortcut icon' type='image/vnd.microsoft.icon' />
+    <link href="//cloudant.com/wp-content/themes/cloudant/images/favicon.png" rel='icon' type='image/png' />
+
     <%= stylesheet_link_tag "screen", media: 'screen' %>
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
