--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -213,7 +213,8 @@ under the License.
               Page.new('AcID', 'acid.html', []),
               Page.new('Back up your data', 'backup-guide.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
-              Page.new('Design document management', 'design_document_management.html', [])
+              Page.new('Design document management', 'design_document_management.html', []),
+              Page.new('Monitoring', 'monitoring.html', [])
             ])
           ].each { |page|
             %>
