--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -201,6 +201,7 @@ under the License.
               Page.new('Advanced Replication', 'advanced_replication.html', []),
               Page.new('Active tasks', 'active_tasks.html', []),
               Page.new('Advanced', 'advanced.html', []),
+              Page.new('Backup', 'backup.html', []),
               Page.new('Try it', 'try.html', [])
             ]),
             Page.new('Guides', 'guides.html', [
