fixed css glitch cause by different html structure

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -471,6 +471,9 @@ body, html {
     @extend %break-words;
     @extend %code-font;
   }
+  pre code {
+    background-color: inherit;
+  }
 
   aside {
     padding-top: 1em;
