--- a/source/stylesheets/syntax.css.scss.erb
+++ b/source/stylesheets/syntax.css.scss.erb
@@ -25,3 +25,8 @@ under the License.
 .highlight, .highlight .w {
   background-color: $code-annotation-bg;
 }
+
+pre.highlight code span {
+  top: 0;
+  position: relative;
+}
