Resynchronize with production, for FB45124.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -233,7 +233,7 @@ under the License.
               Page.new('Transactions in Cloudant', 'transactions.html', []),
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
-              Page.new('Back up your data', 'backup_guide.html', []),
+              Page.new('Back up your data', 'backup-guide.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', []),
               Page.new('Monitoring', 'monitoring.html', [])
