--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -187,12 +187,10 @@ under the License.
               Page.new('Contents', 'index.html#contents', []),
               Page.new('Contribute', 'index.html#contribute', [])
             ]),
-            [
-              Page.new('Visual Guide', 'visual-guide.html', [
-                Page.new('Contents', 'index.html#contents', []),
-                Page.new('Contribute', 'index.html#contribute', [])
-              ]),
-          
+       		 Page.new('Visual Guide', 'visual-guides.html', [
+              Page.new('Supported', 'libraries.html#supported-client-libraries', []),
+              Page.new('Third party', 'libraries.html#third-party-client-libraries', [])
+            ]),
             Page.new('Cloudant Basics', 'basics.html', [
               Page.new('Database as a Service', 'basics.html#database-as-a-service', []),
               Page.new('IBM Bluemix', 'basics.html#ibm-bluemix', []),
@@ -207,7 +205,6 @@ under the License.
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
               Page.new('Third party', 'libraries.html#third-party-client-libraries', [])
-
             ]),
             Page.new('API Reference', 'api.html', [
               Page.new('HTTP', 'http.html', []),
