The search continues. Now trying to make the new TOC entry Visual Guide display the visual-guide document for fb56161.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -187,10 +187,8 @@ under the License.
               Page.new('Contents', 'index.html#contents', []),
               Page.new('Contribute', 'index.html#contribute', [])
             ]),
-       		 Page.new('Visual Guide', 'visual-guides.html', [
-              Page.new('Supported', 'libraries.html#supported-client-libraries', []),
-              Page.new('Third party', 'libraries.html#third-party-client-libraries', [])
-            ]),
+       		 Page.new('Visual Guide', 'visual-guides.html', [])
+       		      ]),
             Page.new('Cloudant Basics', 'basics.html', [
               Page.new('Database as a Service', 'basics.html#database-as-a-service', []),
               Page.new('IBM Bluemix', 'basics.html#ibm-bluemix', []),
