Fixed typo in layout.erb for fb56161.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -187,7 +187,7 @@ under the License.
               Page.new('Contents', 'index.html#contents', []),
               Page.new('Contribute', 'index.html#contribute', [])
             ]),
-       		 Page.new('Visual Guide', 'visual-guides.html', [])
+       		 Page.new('Visual Guide', 'visual-guide.html', [])
        		      ]),
             Page.new('Cloudant Basics', 'basics.html', [
               Page.new('Database as a Service', 'basics.html#database-as-a-service', []),
