--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -187,8 +187,8 @@ under the License.
               Page.new('Contents', 'index.html#contents', []),
               Page.new('Contribute', 'index.html#contribute', [])
             ]),
-       		 Page.new('Visual Guide', 'visual-guide.html', [])
-       		      ]),
+       		 Page.new('Visual Guide', 'visual_guide.html', []) 
+       	    ]),
             Page.new('Cloudant Basics', 'basics.html', [
               Page.new('Database as a Service', 'basics.html#database-as-a-service', []),
               Page.new('IBM Bluemix', 'basics.html#ibm-bluemix', []),
