--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -235,9 +235,10 @@ under the License.
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', []),
               Page.new('Monitoring', 'monitoring.html', [])
+            ]),
+            Page.new('Visual Guides', 'visual_guides.html', [
+              Page.new('Dashboard', 'dashboard.html', [])
             ])
-              Page.new('Visual Guide', 'visual_guide.html', [
-       	             ]),
           ].each { |page|
             %>
 		        <li class="tocify-item">
