--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -222,6 +222,7 @@ under the License.
               Page.new('Active tasks', 'active_tasks.html', []),
               Page.new('Virtual hosts', 'vhosts.html', []),
               Page.new('Advanced', 'advanced.html', []),
+              Page.new('Monitoring', 'monitoring.html', []),
               Page.new('Backup', 'backup.html', []),
               Page.new('Try it', 'try.html', [])
             ]),
@@ -234,8 +235,7 @@ under the License.
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
-              Page.new('Design document management', 'design_document_management.html', []),
-              Page.new('Monitoring', 'monitoring.html', [])
+              Page.new('Design document management', 'design_document_management.html', [])
             ])
           ].each { |page|
             %>
