--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -232,6 +232,7 @@ under the License.
               Page.new('Transactions in Cloudant', 'transactions.html', []),
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
+              Page.new('Backup', 'backup-guide.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', [])
             ]),
