Consolidate topics into one markdown file and removed h4 for fb56161.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -233,8 +233,10 @@ under the License.
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
-              Page.new('Design document management', 'design_document_management.html', []),
-              Page.new('Dashboard', 'dashboard.html', [])
+               Page.new('Design document management', 'design_document_management.html', [])
+-            ]),
+-            Page.new('Visual Guides', 'visual_guides.html', [
+-              Page.new('Dashboard', 'dashboard.html', [])
             ])
           ].each { |page|
             %>
