client libraries smaller fixes

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -367,8 +367,8 @@ body, html {
 
   h2 {
     @extend %header-font;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 18px;
+    font-weight: bold;
     margin-top: 4em;
     margin-bottom: 0;
     padding-top: 1.2em;
