scrolling should not change url

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -114,7 +114,7 @@ under the License.
             hashGenerator: 'pretty',
             highlightOffset: 60,
             scrollTo: 55,
-            scrollHistory: true,
+            scrollHistory: false,
             hashGenerator: function(text, element) {
               return element[0].getAttribute('id');
             }
