--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -29,6 +29,9 @@ under the License.
     <%= stylesheet_link_tag "screen", media: 'screen' %>
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
+    
+    <link href="stylesheets/libraries.css" rel="stylesheet" type="text/css" media="screen" />
+    
     <%= javascript_include_tag  "all" %>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
