--- a/source/layouts/libraries.erb
+++ b/source/layouts/libraries.erb
@@ -30,79 +30,26 @@ under the License.
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
     
+    <link href="stylesheets/libraries.css" rel="stylesheet" type="text/css" media="screen" />
+    
     <%= javascript_include_tag  "all" %>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/default.min.css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-43120670-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+    <script src="//storage.googleapis.com/kimstebel-public/thebe/static/main-built.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript">
 
       $(document).ready(function() {
-        var contentTags = ['h1', 'h2', 'h3', 'h4', 'h5', 'p', 'ul', 'ol', 'aside', 'dl'];
-        function hideCode() {
-          $.cookie('hide-code-column', 'true');
-          var hash = window.location.hash;
-          $('pre').hide();
-          $('blockquote').hide();
-          $('div.blockquote').hide();
-          $('.dark-box').css('width', '20px');
-          $('#hideCodeButton').hide();
-          $('#showCodeButton').show();
-          $('#expand-collapse-code').toggleClass('hide-code-column');
-          for (var i in contentTags) {
-            $('.content > ' + contentTags[i]).css('margin-right', '20px');
-          }
-          if ($(hash).offset()) {
-            $(document).scrollTop($(hash).offset().top);
-          }
-          window.location.hash = hash;
-          $(window).trigger('resize');
-        };
-
-        function activeLanguage() {
-          var res = $('#lang-selector .active').text();
-          if (res === 'curl') {
-            res = 'shell';
-          }
-          return res;
-        }
-
-        function showCode() {
-          $.removeCookie('hide-code-column');
-          var hash = window.location.hash;
-          activateLanguage(activeLanguage());
-          $('blockquote').show();
-          $('div.blockquote').show();
-          $('.dark-box').css('width', '50%');
-          $('#hideCodeButton').show();
-          $('#showCodeButton').hide();
-          $('#expand-collapse-code').toggleClass('hide-code-column');
-          for (var i in contentTags) {
-            $('.content > ' + contentTags[i]).css('margin-right', '50%');
-          }
-          if ($(hash).offset()) {
-            $(document).scrollTop($(hash).offset().top);
-          }
-          window.location.hash = hash;
-          $(window).trigger('resize');
-        };
-        if ($.cookie('hide-code-column') && window.location.pathname !== '/try.html') { //hide code column if cookie is set, except on the try it page
-          hideCode();
-        }
-        $('#hideCodeButton').click(hideCode);
-        $('#showCodeButton').click(showCode);
-
+        
+        new Thebe({
+          url: 'http://vmwtpm097c.hursley.ibm.com:8000/',
+		      selector: 'pre.thebe',
+          tmpnb_mode: true,
+          kernel_name: '<%= current_page.data.jupyter_kernel%>',
+		      debug: true,
+        	image_name: 'kimstebel/thebe-demo-notebook',
+	        codemirror_mode_name: '<%= current_page.data.jupyter_kernel%>'
+        });
+        
         var headerSelectors = "h3";
         if ($('h3').length !== 0) {
           var toc = $("#toc").tocify({
@@ -139,19 +86,6 @@ under the License.
           <% end %>
         ]);
 
-        //var languageInit = $('#lang-selector li.active').text();
-        //$('#selected-language').text(languageInit);
-        //$('#selected-language').click(langDropdown);
-
-        //function langDropdown() {
-        //  $('#lang-selector ul').show();
-        //}
-
-        $('blockquote a').attr('title', 'Click here to try out interactive examples!');
-        $('blockquote a').attr('target', '_blank');
-        $('div.blockquote a').attr('title', 'Click here to try out interactive examples!');
-        $('div.blockquote a').attr('target', '_blank');
-
       });
     </script>
 
@@ -159,22 +93,22 @@ under the License.
 
   <body class="<%= page_classes %>">
 
-    <div class="main-header" role="complementary" aria-label="main-header">
-      <a href="#maincontent"><img src="images/ibm_cloudant.png" alt="Cloudant logo"/></a>
-      <div class="header-title" role="complementary" aria-label="header-title">Documentation</div>
+    <div class="main-header">
+      <img src="images/ibm_cloudant.png" alt="Cloudant logo"/>
+      <div class="header-title">Documentation</div>
     </div>
 
-    <div class="tocify-wrapper" role="complementary" aria-label="tocify-wrapper">
-      <div id="searchbox" role="complementary" aria-label="searchbox">
+    <div class="tocify-wrapper">
+      <div id="searchbox">
         <form>
-          <label for="searchinput"><input type="text" name="search" placeholder="Search" id="searchinput"></label>
+          <input type="text" name="search" placeholder="Search">
           <button type="submit">
             <img src="images/search_icon.png" alt="submit"/>
           </button>
         </form>
       </div>
 
-<ul class="tocify-header first-header">
+      <ul class="tocify-header first-header">
         <%
           class Page
             def initialize(name, link, subpages)
@@ -196,6 +130,7 @@ under the License.
               Page.new('IBM Bluemix', 'basics.html#ibm-bluemix', []),
               Page.new('HTTP API', 'basics.html#http-api', []),
               Page.new('JSON', 'basics.html#json', []),
+              Page.new('How do I find data?', 'basics.html#how-do-i-find-data?', []),
               Page.new('Distributed', 'basics.html#distributed', []),
               Page.new('Replication', 'basics.html#replication', []),
               Page.new('Cloudant Local', 'basics.html#cloudant-local', [])
@@ -243,72 +178,61 @@ under the License.
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
               Page.new('Backup', 'backup-guide.html', []),
-              Page.new('Backup using Replication', 'backup-guide-using-replication.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', [])
             ])
-          ].each { |page|
+          ].each { |page| 
             %>
-<li class="tocify-item"><a href="<%=page.link%>"><%=page.name%></a>
+		        <li class="tocify-item">
+				      <a href="<%=page.link%>"><%=page.name%></a>
+				    </li>
 				    <%
 				    if !page.subpages.empty? && (page.subpages.any? { |subpage| subpage.link.split('#')[0] == request.path } || page.link.split('#')[0] == request.path)
-				      %>
-<ul class="tocify-subheader-styles" style="display: block;">
-					<%
+				      %> <ul class="tocify-subheader-styles" style="display: block;"> <%
 				      page.subpages.each { |subpage|
-				    %>
-<li class="tocify-item"><a href="<%=subpage.link%>"><%=subpage.name%></a>
+				        %>
+		            <li class="tocify-item">
+				          <a href="<%=subpage.link%>"><%=subpage.name%></a>
+				        </li>
 				        <%
 				        if subpage.link == request.path
 				          %>
-<div id="toc" role="complementary" aria-label="toc-2"></div>
+				            <div id="toc"></div>
 				          <%
 				        end
 				      }
-				      %>
-</li>
-</ul>
-			<%
+				      %> </ul> <%
 				    end
           } %>
-</li>
-</ul>
+      </ul>
 
 
 
 
 
-<ul class="toc-footer">
-<li><a href="https://cloudant.com/"><img src="images/cloudant_icon.png" alt="Cloudant icon"/></a></li>
-<li><a href="https://github.com/cloudant-labs/slate"><img src="images/github_icon.png" alt="Github icon"/></a></li>
-<li><a href="http://stackoverflow.com/questions/tagged/cloudant"><img src="images/stackoverflow_icon.png" alt="Stackoverflow icon"/></a></li>
-</ul>
+      <ul class="toc-footer">
+        <li><a href="https://cloudant.com/"><img src="images/cloudant_icon.png" alt="Cloudant icon"/></a></li>
+        <li><a href="https://github.com/cloudant-labs/slate"><img src="images/github_icon.png" alt="Github icon"/></a></li>
+        <li><a href="http://stackoverflow.com/questions/tagged/cloudant"><img src="images/stackoverflow_icon.png" alt="Stackoverflow icon"/></a></li>
+      </ul>
     </div>
-    <div class="page-wrapper" role="complementary" aria-label="page-wrapper">
-      <div id="expand-collapse-code" role="complementary" aria-label="expand-collapse-code">
-        <button class="showHideButton" id="hideCodeButton" title="hide code column"><label for="hideCodeButton">&nbsp;</label></button>
-        <button class="showHideButton" id="showCodeButton" title="show code column"><label for="showCodeButton">&nbsp;</label></button>
+    <div class="page-wrapper">
+      <div id="expand-collapse-code">
+        <button class="showHideButton" id="hideCodeButton" title="hide code column"> </button>
+        <button class="showHideButton" id="showCodeButton" title="show code column"> </button>
       </div>
-      <div class="dark-box" role="complementary" aria-label="dark-box-1"></div>
-      <div class="content" role="main" id="maincontent">
-        <%
-        def replace_blockquote(str)
-          while str.include? "<blockquote>"
-            str.sub!(/<blockquote>/, '<div class="blockquote" role="complementary" aria-label="' + SecureRandom.base64 + '">')
-            str.sub!(/<\/blockquote>/, '</div>')
-          end
-          return str
-        end
-        %>
+      <div class="dark-box"></div>
+      <div class="content">
+
         <% if current_page.data.includes %>
           <% current_page.data.includes.each do |include| %>
-            <%= replace_blockquote(partial("includes/#{include}")) %>
+            <%= partial "includes/#{include}" %>
           <% end %>
         <% end %>
-        <%= replace_blockquote(yield) %>
+        <%= yield %>
       </div>
-      <div class="dark-box" role="complementary" aria-label="dark-box-2">
-        <div id="lang-selector" role="complementary" aria-label="lang-selector">
+      <div class="dark-box">
+        <div id="lang-selector">
           <% if current_page.data.language_tabs %>
             <% current_page.data.language_tabs.each do |lang| %>
               <% if lang.is_a? Hash %>
@@ -321,5 +245,15 @@ under the License.
         </div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-43120670-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
