--- a/source/stylesheets/libraries.css.scss
+++ b/source/stylesheets/libraries.css.scss
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import 'variables';
 
 .content {
   pre, blockquote {
@@ -36,11 +37,30 @@
   height: auto;
   border-radius:10px;
   position: relative;
-  margin: 40px;
+  margin: 20px;
   padding:10px;
   left:0;
 }
 
 .output_prompt, .output_result {
   display:none;
+}
+
+.output_subarea pre {
+//  background-color: #fff;
+//  color: #000;
+
+}
+
+.output_subarea pre, pre.thebe {
+  border-radius: 0;
+  margin: 10px 0 0 0;
+  padding: 0 0 0 30px;
+  font-family: monospace;
+  font-size: 16px;
+  line-height: 16px;
+}
+
+.CodeMirror-linenumber, .CodeMirror-gutters {
+  visibility: hidden;
 }
