--- a/source/layouts/libraries.erb
+++ b/source/layouts/libraries.erb
@@ -29,8 +29,7 @@ under the License.
     <%= stylesheet_link_tag "screen", media: 'screen' %>
     <%= stylesheet_link_tag "typeahead", media: 'screen' %>
     <%= stylesheet_link_tag "print", media: 'print' %>
-    
-    <link href="stylesheets/libraries.css" rel="stylesheet" type="text/css" media="screen" />
+    <%= stylesheet_link_tag "libraries", media: 'screen' %>
     
     <%= javascript_include_tag  "all" %>
 
