--- a/source/layouts/libraries.erb
+++ b/source/layouts/libraries.erb
@@ -40,7 +40,8 @@ under the License.
       $(document).ready(function() {
         
         new Thebe({
-          url: 'https://tmpnb.kimstebel.com:8000', //'http://vmwtpm097c.hursley.ibm.com:8000/',
+          url: 'http://vmwtpm097c.hursley.ibm.com:8000/',
+          //'https://tmpnb.kimstebel.com:8000', 
 		      selector: 'pre.thebe',
           tmpnb_mode: true,
           kernel_name: '<%= current_page.data.jupyter_kernel%>',
