--- a/source/stylesheets/normalize.css
+++ b/source/stylesheets/normalize.css
@@ -120,7 +120,7 @@ a:hover {
 
 /*code transparent background */
 
-blockquote code.prettyprint {
+blockquote code.prettyprint, div.blockquote code.prettyprint {
   background-color: transparent;
 }
 
