--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -155,22 +155,23 @@ under the License.
 
   <body class="<%= page_classes %>">
 
-    <div class="main-header">
+    <div class="main-header" role="complementary" aria-label="main-header">
       <img src="images/ibm_cloudant.png" alt="Cloudant logo"/>
-      <div class="header-title">Documentation</div>
+      <div class="header-title" role="complementary" aria-label="header-title">Documentation</div>
     </div>
 
-    <div class="tocify-wrapper">
-      <div id="searchbox">
+    <div class="tocify-wrapper" role="complementary" aria-label="tocify-wrapper">
+      <div id="searchbox" role="complementary" aria-label="searchbox">
         <form>
-          <input type="text" name="search" placeholder="Search">
+          <label for="searchinput">Search:</label>
+          <input type="text" name="search" placeholder="Search" id="searchinput">
           <button type="submit">
             <img src="images/search_icon.png" alt="submit"/>
           </button>
         </form>
       </div>
 
-      <ul class="tocify-header first-header">
+<ul class="tocify-header first-header">
         <%
           class Page
             def initialize(name, link, subpages)
@@ -238,46 +239,48 @@ under the License.
             ])
           ].each { |page| 
             %>
-		        <li class="tocify-item">
-				      <a href="<%=page.link%>"><%=page.name%></a>
-				    </li>
+<li class="tocify-item"><a href="<%=page.link%>"><%=page.name%></a>
 				    <%
 				    if !page.subpages.empty? && (page.subpages.any? { |subpage| subpage.link.split('#')[0] == request.path } || page.link.split('#')[0] == request.path)
-				      %> <ul class="tocify-subheader-styles" style="display: block;"> <%
+				      %>
+<ul class="tocify-subheader-styles" style="display: block;">
+					<%
 				      page.subpages.each { |subpage|
-				        %>
-		            <li class="tocify-item">
-				          <a href="<%=subpage.link%>"><%=subpage.name%></a>
-				        </li>
+				    %>
+<li class="tocify-item"><a href="<%=subpage.link%>"><%=subpage.name%></a>
 				        <%
 				        if subpage.link == request.path
 				          %>
-				            <div id="toc"></div>
+<div id="toc" role="complementary" aria-label="toc-2"></div>
 				          <%
 				        end
 				      }
-				      %> </ul> <%
+				      %>
+</li>
+</ul>
+			<%
 				    end
           } %>
-      </ul>
+</li>
+</ul>
 
 
 
 
 
-      <ul class="toc-footer">
-        <li><a href="https://cloudant.com/"><img src="images/cloudant_icon.png" alt="Cloudant icon"/></a></li>
-        <li><a href="https://github.com/cloudant-labs/slate"><img src="images/github_icon.png" alt="Github icon"/></a></li>
-        <li><a href="http://stackoverflow.com/questions/tagged/cloudant"><img src="images/stackoverflow_icon.png" alt="Stackoverflow icon"/></a></li>
-      </ul>
+<ul class="toc-footer">
+<li><a href="https://cloudant.com/"><img src="images/cloudant_icon.png" alt="Cloudant icon"/></a></li>
+<li><a href="https://github.com/cloudant-labs/slate"><img src="images/github_icon.png" alt="Github icon"/></a></li>
+<li><a href="http://stackoverflow.com/questions/tagged/cloudant"><img src="images/stackoverflow_icon.png" alt="Stackoverflow icon"/></a></li>
+</ul>
     </div>
-    <div class="page-wrapper">
-      <div id="expand-collapse-code">
-        <button class="showHideButton" id="hideCodeButton" title="hide code column"> </button>
-        <button class="showHideButton" id="showCodeButton" title="show code column"> </button>
+    <div class="page-wrapper" role="complementary" aria-label="page-wrapper">
+      <div id="expand-collapse-code" role="complementary" aria-label="expand-collapse-code">
+        <button class="showHideButton" id="hideCodeButton" title="hide code column"><label for="hideCodeButton">hideCodeButton</label></button>
+        <button class="showHideButton" id="showCodeButton" title="show code column"><label for="showCodeButton">showCodeButton</label></button>
       </div>
-      <div class="dark-box"></div>
-      <div class="content">
+      <div class="dark-box" role="complementary" aria-label="dark-box-1"></div>
+      <div class="content" role="main">
 
         <% if current_page.data.includes %>
           <% current_page.data.includes.each do |include| %>
@@ -286,8 +289,8 @@ under the License.
         <% end %>
         <%= yield %>
       </div>
-      <div class="dark-box">
-        <div id="lang-selector">
+      <div class="dark-box" role="complementary" aria-label="dark-box-2">
+        <div id="lang-selector" role="complementary" aria-label="lang-selector">
           <% if current_page.data.language_tabs %>
             <% current_page.data.language_tabs.each do |lang| %>
               <% if lang.is_a? Hash %>
