--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -524,7 +524,7 @@ body, html {
 // This is all the stuff that appears in the right half of the page
 
 .content {
-  pre, blockquote {
+  pre, blockquote, div.blockquote {
     position:relative;
     top: -1em;
     background-color: $code-annotation-bg;
