Include backup using replication guide into build, for FB62125.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -237,6 +237,7 @@ under the License.
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
               Page.new('Backup', 'backup-guide.html', []),
+              Page.new('Backup using Replication', 'backup-guide-using-replication.html', []),
               Page.new('CouchApps', 'couchapps.html', []),
               Page.new('Design document management', 'design_document_management.html', [])
             ])
