Correct metadata entry.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -214,7 +214,7 @@ under the License.
               Page.new('Documents', 'document.html', []),
               Page.new('Attachments', 'attachments.html', []),
               Page.new('Query', 'cloudant_query.html', []),
-              Page.new('Metadata Indexing', 'metadata_discovery.html', []),
+              Page.new('Metadata Indexing', 'metadata_indexing.html', []),
               Page.new('Design Documents', 'design_documents.html', []),
               Page.new('Views (MapReduce)', 'creating_views.html', []),
               Page.new('Search', 'search.html', []),
