Consolidated files for fb68628.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -199,9 +199,7 @@ under the License.
               Page.new('How do I find data?', 'basics.html#how-do-i-find-data?', []),
               Page.new('Distributed', 'basics.html#distributed', []),
               Page.new('Replication', 'basics.html#replication', []),
-              Page.new('Versions of Cloudant', 'versions_cloudant.html#versions-cloudant', []),
-              	Page.new('Cloudant Local', 'cloudant_local.html#cloudant-local', []),
-              	Page.new('Cloudant on Bluemix Local', 'cloudant_bluemix_local.html#cloudant-bluemix-local', [])
+              Page.new('Versions of Cloudant', 'versions_cloudant.html', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
