remove client libraries changes for now

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -203,15 +203,8 @@ under the License.
               Page.new('Cloudant Local', 'basics.html#cloudant-local', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
-              Page.new('Sync', 'libraries-sync.html', []),
-              Page.new('Javascript', 'libraries-nodejs.html', []),
-              Page.new('Python', 'libraries-python.html', []),
-              Page.new('Java', 'libraries-java.html', []),
-              Page.new('iOS and OS X', 'libraries-iOS.html', []),
-              Page.new('Meteor', 'libraries-meteor.html', []),
-              Page.new('Ruby', 'libraries-ruby.html', []),
-              Page.new('.Net', 'libraries-dotnet.html', []),
-              Page.new('PHP', 'libraries-php.html', [])
+              Page.new('Supported', 'libraries.html#supported-client-libraries', []),
+              Page.new('Third party', 'libraries.html#third-party-client-libraries', [])
             ]),
             Page.new('API Reference', 'api.html', [
               Page.new('HTTP', 'http.html', []),
