fix bug in config and layout

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -334,7 +334,7 @@ under the License.
               codemirror_mode_name: '<%= current_page.data.thebe.codemirror_mode_name %>'
             });
           }
-          var tmpnbHosts = [https://tmpnb2.kimstebel.com:8000, 'https://tmpnb.kimstebel.com:8000'];
+          var tmpnbHosts = ['https://tmpnb2.kimstebel.com:8000', 'https://tmpnb.kimstebel.com:8000'];
           $.ajax(tmpnbHosts[0] + '/api/stats', {
             success: function(data) {
               if (data.available > 0) {
