Restructure content for fb62987.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -234,7 +234,8 @@ under the License.
               Page.new('Querying data', 'querying.html', []),
               Page.new('Replication', 'replication_guide.html', []),
               Page.new('Managing tasks', 'managing_tasks.html', []),
-              Page.new('Document versioning and conflicts', 'mvcc.html', []),
+              Page.new('Document versioning and MVCC', 'mvcc.html', []),
+              Page.new('Conflicts', 'conflicts.html', []),
               Page.new('Grouping related documents together in Cloudant', 'transactions.html', []),
               Page.new('CAP theorem', 'cap_theorem.html', []),
               Page.new('AcID', 'acid.html', []),
