Make CCM content visible in draft (freature branch) build.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -200,7 +200,8 @@ under the License.
               	Page.new('JSON', 'basics.html#json', []),
               	Page.new('Distributed', 'basics.html#distributed', []),
               	Page.new('Replication', 'basics.html#replication', []),
-              	Page.new('Versions of Cloudant', 'basics.html#versions-of-cloudant', [])
+              	Page.new('Versions of Cloudant', 'basics.html#versions-of-cloudant', []),
+              	Page.new('Cloud Consumption Model', 'ccm.html', [])
             ]),
             Page.new('Client Libraries', 'libraries.html', [
               Page.new('Supported', 'libraries.html#supported-client-libraries', []),
