Restructure following feedback.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -193,8 +193,8 @@ under the License.
             ]),
 			Page.new('Cloudant Offerings', 'offerings.html', [
 				Page.new('Database as a Service', 'offerings.html#database-as-a-service', []),
-				Page.new('IBM Bluemix', 'offerings.html#ibm-bluemix', []),
-				Page.new('Cloudant Local', 'offerings.html#cloudant-local', [])
+				Page.new('Cloudant Local', 'offerings.html#cloudant-local', []),
+				Page.new('IBM Bluemix', 'bluemix.html', [])
             ]),
 			Page.new('Cloudant Basics', 'basics.html', [
 				Page.new('HTTP API', 'basics.html#http-api', []),
